controllers/victoriametrics/vmcluster/assets/vmselect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmselect-ingress
  labels:
    platform.monitoring.app: vmselect
    app.kubernetes.io/component: victoriametrics
    app.kubernetes.io/part-of: monitoring
    app.kubernetes.io/managed-by: monitoring-operator
spec:
  tls: ~
  rules:
    - host: ""
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vmselect-k8s
                port:
                  number: 8481
